Fixed scrollbar on sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,8 @@ html, body {
   background: #040620;
   height: 92%;
   line-height: 35px;
-  padding: 8vh 10px 0px 10px;
+  padding: 0vh 10px 0px 10px;
+  margin-top: 8vh;
   text-align: center;
   width: 342px;
   position: fixed;
